src/styles/styles.css
* {
  box-sizing: border-box;
}

body {
  background-color: #333;
  color: white;
  display: flex;
  flex-direction: column;
  font-family: sans-serif;
  height: 100vh;
  margin: 0;
  overflow: hidden;
  padding: 0;
}

a {
  color: white;
  text-decoration: none;

  &:visited {
    color: white;
  }
}

header {
  align-items: flex-start;
  border-top: 5px solid #777;
  border-bottom: 5px solid #777;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 0.5em;
  justify-content: center;
  padding: 0.5em;

  h1 {
    margin: 0;
    font-variant-caps: petite-caps;
    font-weight: 300;
  }

  img {
    height: 32px;
    margin-right: 0.25em;
    margin-top: 2px;
    vertical-align: text-top;
    width: 32px;
  }
}

div.controls {
  display: flex;
  flex-grow: 1;
  gap: 1em;
  justify-content: center;
  position: relative;

  span.count {
    background: #555;
    border-radius: 4px;
    display: grid;
    min-width: calc(9ch + 16px);
    padding: 7px 8px 5px;
    place-content: center;
    white-space: nowrap;
  }

  div.select {
    flex-grow: 1;
    flex-shrink: 1;
    max-width: 20em;
  }

  button {
    background: none;
    border: none;
    border-radius: 4px;
    cursor: pointer;

    &:hover {
      background-color: #555;
    }
  }

  svg {
    display: inline-block;
    fill: transparent;
    height: 1.5rem;
    stroke: white;
    vertical-align: middle;
    width: 1.5rem;
  }

  div.search {
    display: flex;
    max-width: 20em;
    transition: flex 200ms ease-in-out;

    button {
      height: 100%;
    }

    input {
      appearance: none;
      background-color: transparent;
      border: none;
      color: white;
      flex: 1 1 auto;
      font-size: 1rem;
      font-weight: normal;
      outline-offset: -1px;
      outline: 1px solid #555;
      padding: 0;
      width: 0;
    }
  }
}

#meme-wall {
  flex-grow: 1;
  font-size: 0;
  overflow-x: hidden;
  overflow-y: scroll;
  transition: opacity 1s ease-in-out;

  &.loading {
    opacity: 0;
    transition: none;
  }

  div {
    display: inline;
  }

  img {
    background-size: cover;
    box-shadow: inset 0 0 4px 4px rgba(0, 0, 0, 0.5);
    height: 15vmax;
    opacity: 1;
    transform-origin: 0% 0%;
    transition-duration: 0.3s;
    transition-property: transform, opacity;
    transition-timing-function: ease-out;
    vertical-align: top;
    width: auto;

    &.hidden {
      display: none;
    }
  }

  section {
    display: none;
    background: rgba(0, 0, 0, 0.8);
    bottom: 0;
    color: white;
    font-size: large;
    padding: 0 1em;
    position: absolute;
    width: 100%;
    z-index: 2;

    dl {
      display: grid;
      grid-template-columns: 80px 1fr;
    }
  }

  &.zoomed {
    img {
      opacity: 0.3;
      transition-timing-function: ease-in;

      &.active {
        opacity: 1;

        & + section {
          display: block;
        }
      }
    }
  }
}

/* 950px = 815px / 0.86 */
@media (min-width: 950px) {
  header {
    gap: 3em;
    justify-content: space-between;
    padding: 0.25em 1em;
  }

  div.controls {
    justify-content: flex-end;
  }
}

@media (max-width: 1159px) {
  div.controls {
    padding-top: 4px;
    transition: padding-bottom 200ms ease;

    &.searching {
      padding-bottom: 55px;

      div.search {
        button {
          background-color: #555;
          border-radius: 4px 0 0 4px;
        }

        input {
          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' fill='transparent' stroke='%23555'%3E%3Ccircle cx='10' cy='10' r='7'%3E%3C/circle%3E%3Cline x1='21' y1='21' x2='15' y2='15'%3E%3C/line%3E%3C/svg%3E");
          background-repeat: no-repeat;
          background-size: 1.5rem;
          background-position: 10px center;
          border-radius: 4px;
          padding: 10px 10px 10px 40px;
          position: absolute;
          width: 100%;
          left: 0;
          bottom: 3px;
          height: 40px;
          line-height: 1em;
        }
      }
    }
  }
}

@media (min-width: 1160px) {
  header {
    align-items: center;
  }

  div.controls {
    &.searching {
      div.search {
        flex-grow: 1;

        button {
          background-color: #555;
          border-radius: 4px 0 0 4px;
        }

        input {
          border-radius: 0 4px 4px 0;
          display: inline;
          padding: 0 10px;
        }
      }
    }
  }
}

